welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:6: error: type mismatch;
 found   : Unit
 required: Integer
  if (a == b) {
  ^